--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "prettier": "^3.0.3",
     "replugged": "^4.6.2",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "simple-markdown": "^0.7.3"
   }
 }
